# colab

./: .gitignore  .release.env  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs  config.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
Formula/: colab.rb
cli/: Cargo.toml
cli/src/: lib.rs  main.rs
cli/tests/: integration_test.rs
crates/colab-cli/: Cargo.toml  build.rs
crates/colab-cli/benches/: walker.rs
crates/colab-cli/src/: cli.rs  discover.rs  format.rs  language_server.rs  main.rs  packs.rs
crates/colab-cli/tests/: cli.rs
crates/colab-core/: Cargo.toml
crates/colab-core/src/: backend.rs  error.rs  lib.rs  template.rs  transformer.rs  walker.rs
crates/colab-dsl/: Cargo.toml
crates/colab-dsl/src/: ast.rs  codemod.lalrpop  compiler.rs  lib.rs  model.rs
crates/colab-dsl/tests/: corpus.rs
crates/colab-lang-go/: Cargo.toml
crates/colab-lang-go/src/: calls.rs  imports.rs  lib.rs  struct_tags.rs  symbols.rs
crates/colab-lang-java/: Cargo.toml
crates/colab-lang-java/src/: imports.rs  lib.rs  packages.rs  symbols.rs
crates/colab-lang-js/: Cargo.toml
crates/colab-lang-js/src/: imports.rs  lib.rs  symbols.rs
crates/colab-lang-python/: Cargo.toml
crates/colab-lang-python/src/: imports.rs  lib.rs  symbols.rs
crates/colab-lang-rust/: Cargo.toml
crates/colab-lang-rust/src/: calls.rs  deps.rs  lib.rs  symbols.rs  uses.rs
crates/colab-mcp/: Cargo.toml
crates/colab-mcp/src/: lib.rs  tools.rs
docs/: README.md  architecture.md  cli.md  development-plan.md  dsl.md  features.md
examples/go/imports/: main.go  simple.codemod
examples/packs/: README.md
examples/packs/java/: 8-to-21.codemod
examples/packs/rust/: edition-2021-to-2024.codemod
examples/rust/rename_crate/: Cargo.toml  README.md  rename.codemod
examples/rust/rename_crate/src/: main.rs
src/: cli.rs  config.rs  error.rs  integration_test.rs  language_server.rs  main.rs  refactor.rs  walker.rs
src/app/: mod.rs
src/codemod/: ast.rs  codemod.lalrpop  compiler.rs  config.rs  mod.rs  model.rs  refactor.rs
src/codemod/go/: imports.rs  mod.rs
src/colab/: colab.lalrpop  mod.rs
src/go/: imports.rs  mod.rs
src/language_server/: mod.rs
src/lspmod/: mod.rs
test_data/go/: test.go
tests/corpus/: README.md
tests/corpus/go/call_replace/: script
tests/corpus/go/call_replace/expected/: main.go
tests/corpus/go/call_replace/input/: main.go
tests/corpus/go/delete_import/: script
tests/corpus/go/delete_import/expected/: main.go
tests/corpus/go/delete_import/input/: main.go
tests/corpus/go/ensure_import_missing/: script
tests/corpus/go/include_directive/: script  shared.codemod
tests/corpus/go/include_directive/expected/: main.go
tests/corpus/go/include_directive/input/: main.go
tests/corpus/go/multi_rule_imports/: script
tests/corpus/go/multi_rule_imports/expected/: main.go
tests/corpus/go/no_match/: script
tests/corpus/go/repeated_imports/expected/: main.go
tests/corpus/go/repeated_imports/input/: main.go
tests/corpus/go/single_import/: script
tests/corpus/go/single_import/expected/: main.go
tests/corpus/go/struct_tag_rename/: script
tests/corpus/go/struct_tag_rename/expected/: types.go
tests/corpus/go/struct_tag_rename/input/: types.go
tests/corpus/go/symbol_rename/: script
tests/corpus/go/symbol_rename/expected/: main.go
tests/corpus/go/symbol_rename/input/: main.go
tests/corpus/java/import_rename/: script
tests/corpus/java/import_rename/expected/: Hello.java
tests/corpus/java/import_rename/input/: Hello.java
tests/corpus/java/package_rename/: script
tests/corpus/java/package_rename/expected/: Hello.java
tests/corpus/java/package_rename/input/: Hello.java
tests/corpus/java/symbol_rename/: script
tests/corpus/java/symbol_rename/expected/: Hello.java
tests/corpus/java/symbol_rename/input/: Hello.java
tests/corpus/js/specifier_rename/: script
tests/corpus/js/specifier_rename/expected/: main.js
tests/corpus/js/specifier_rename/input/: main.js
tests/corpus/js/symbol_rename/: script
tests/corpus/js/symbol_rename/expected/: main.js
tests/corpus/js/symbol_rename/input/: main.js
tests/corpus/python/ensure_import/: script
tests/corpus/python/ensure_import/expected/: main.py
tests/corpus/python/ensure_import/input/: main.py
tests/corpus/python/import_rename/: script
tests/corpus/python/import_rename/expected/: main.py
tests/corpus/python/import_rename/input/: main.py
tests/corpus/python/symbol_rename/: script
tests/corpus/python/symbol_rename/expected/: main.py
tests/corpus/python/symbol_rename/input/: main.py
tests/corpus/rust/call_replace/: script
tests/corpus/rust/call_replace/expected/: lib.rs
tests/corpus/rust/call_replace/input/: lib.rs
tests/corpus/rust/crate_rename/: script
tests/corpus/rust/crate_rename/expected/: Cargo.toml
tests/corpus/rust/crate_rename/input/: Cargo.toml
tests/corpus/rust/delete_crate/: script
tests/corpus/rust/delete_crate/expected/: Cargo.toml
tests/corpus/rust/delete_crate/input/: Cargo.toml
tests/corpus/rust/delete_use/: script
tests/corpus/rust/delete_use/expected/: lib.rs
tests/corpus/rust/delete_use/input/: lib.rs
tests/corpus/rust/ensure_use/: script
tests/corpus/rust/ensure_use/expected/: lib.rs
tests/corpus/rust/symbol_rename/: script
tests/corpus/rust/symbol_rename/expected/: lib.rs
tests/corpus/rust/symbol_rename/input/: lib.rs
tests/corpus/rust/use_and_crate_rename/: script
tests/corpus/rust/use_and_crate_rename/expected/: Cargo.toml
tests/corpus/rust/use_and_crate_rename/expected/src/: lib.rs
tests/corpus/rust/use_and_crate_rename/input/: Cargo.toml
tests/corpus/rust/use_and_crate_rename/input/src/: lib.rs
tests/corpus/rust/use_rename/: script
tests/corpus/rust/use_rename/expected/src/: lib.rs
tests/corpus/rust/use_rename/input/src/: lib.rs
