[package]
name = "colab"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.22.1"

[dependencies]
lalrpop-util = { version = "0.22.1", features = ["lexer", "unicode"] }
clap = { version = "4.5.31", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tree-sitter = "0.25.2"
tree-sitter-go = "0.23.4"
tree-sitter-gomod = "1.0.1"
tower-lsp = "0.20.0"
tokio = { version = "1.35.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
colored = "2.0"
chrono = "0.4"
