[package]
name = "colab-dsl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Codemod DSL for colab: parser, AST, compiler, and runtime IR."
build = "build.rs"

[dependencies]
colab-core = { workspace = true }
lalrpop-util = { workspace = true }

[dev-dependencies]
# Tests need real backends to exercise compile() end-to-end. Production
# code in this crate must NOT depend on any colab-lang-* crate.
colab-lang-go = { workspace = true }
colab-lang-java = { workspace = true }
colab-lang-js = { workspace = true }
colab-lang-python = { workspace = true }
colab-lang-rust = { workspace = true }

[build-dependencies]
lalrpop = { workspace = true }
