[package]
name = "colab-lang-js"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "JavaScript/TypeScript language backend for colab: ES module specifier rewrites."

[dependencies]
colab-core = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-javascript = { workspace = true }
